Google-microservices-devsecops-project

--- a/src/frontend/templates/footer.html
+++ b/src/frontend/templates/footer.html
@@ -30,16 +30,17 @@
             <p class="footer-text">
                 **🔗 Stay Connected:**
                 <br>
-                🌐 **Website**: <a href="https://harishnshetty.github.io/">https://harishnshetty.github.io/</a>
+                🌐 **Website**: <a href="https://elsondevops.cloud/">https://elsondevops.cloud//</a>
                 <br>
-                💼 **LinkedIn**: <a href="https://in.linkedin.com/in/harishnshetty?trk=profile-badge">harishnshetty</a>
+                💼 **LinkedIn**: <a href="https://www.linkedin.com/in/elsondevops/">elsondevops</a>
                 <br>
-                🐱 **GitHub**: <a href="https://github.com/harishnshetty">harishnshetty</a>
+                🐱 **GitHub**: <a href="https://github.com/elsonpulikkan96">elsonpulikkan96</a>
                 <br>
-                ▶️ **YouTube**: <a href="https://www.youtube.com/@devopsHarishNShetty">@devopsHarishNShetty</a>
+		<br>
+		📚 **Medium**: <a href="https://medium.com/@elsonpulikkan">https://medium.com/@elsonpulikkan/</a>
                 <br>
                 <small>
-                    (<a href="https://github.com/harishnshetty/Google-microservices-devsecops-project.git">My Custom DevSecOps Build Repo</a>)
+                    (<a href="https://github.com/elsonpulikkan96/Google-microservices-devsecops-project.git">My Custom DevSecOps Build Repo</a>)
                 </small>
             </p>
 
